cmake_minimum_required(VERSION 3.12)
project(Nmail_server)
set(CMAKE_CXX_STANDARD 14)
find_package(Threads REQUIRED)
add_executable(Nmail_server main.c server.c mySocket.c mySocket.h client_fun.c client_fun.h server.h Initialization.c Initialization.h mailGoToBox.c mailGoToBox.h blackList.c blackList.h contact.c contact.h login.h login.c packaging.c packaging.h dabao.c dabao.h)
target_link_libraries(Nmail_server Threads::Threads)
